0024323: TKOpenGl - spot light sources are not handled in Phong GLSL program

Limit number of lights (breaks compatibility with old hardware).